changes right before talk

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               			<h2>What We'll go over.</h2>
               			<ul>
               				<li>What makes a good admin.</li>
-              				<li>Why making drupal's work can be hard.</li>
+              				<li>Why Drupal admin can be challenging.</li>
               				<li>Quick things to look for.</li>
               				<li>Modules that help.</li>
               				<li>What the future holds.</li>
@@ -112,10 +112,11 @@
 						</ul>
 					</section>
 					<section>
-						<h2>Why's it hard to get right?</h2>
+						<h2>Why it's hard to get right.</h2>
 						<p class="fragment">Drupal is super flexible. . .</p>
-						<p class="fragment">Therefore it can't come with sane defaults.</p>
+						<p class="fragment">So the default admin is hard to peg.</p>
 						<img class="fragment" src="/img/sane-defaults.png">
+						<p class="fragment">Maybe. . .</p>
 					</section>									
 					<section>
 						<h2>Users need to understand too much.</h2>
@@ -144,7 +145,7 @@
 					<section>
 						<h2>What works?</h2>
 						<h3>Elements of a good admin experience.</h3>
-						<p class="fragment">We'll use wordpress as an example.</p>
+						<p class="fragment">Copy Wordpress.</p>
 					</section>
 					<section>
 						<h2>Designed for common tasks</h2>
@@ -168,6 +169,8 @@
 					</section>
 					<section data-state="soothe">
 						<h2>Build the admin as you go.</h2>
+						<p class="fragment">Start with a solid foundation from day 1.</p>
+						<p class="fragment">Think about the admin for each feature.</p>
 					</section>
 				</section>
 				<section>
@@ -185,31 +188,16 @@
 						</ul>
 					</section>
 					<section>
-						<h2>Where do they start?</h2>
+						<h2>Questions to ask.</h2>
 						<ul>
-							<li>Did you setup the dashboard?</li>
+							<li class="fragment">Where do they start?</li>
+							<li class="fragment">Is it hard for you?</li>
+							<li class="fragment">Are permissions right?</li>
+							<li class="fragment">Did you fill out field help text?</li>
+							<li class="fragment">Are default input filters right?</li>
+							<li class="fragment">Are relationships transperant?</li>
+							<li class="fragment">Are there Select lists of doom?</li>
 						</ul>
-					</section>
-					<section>
-						<h2>If it's hard for you it's impossible for them.</h2>
-					</section>
-					<section>
-						<h2>Are permissions apropriate?</h2>
-					</section>
-					<section>
-						<h2>Did you fill out field help text.</h2>
-					</section>
-					<section>
-						<h2>Are default input filters right?</h2>
-					</section>
-					<section>
-						<h2>Are relationships transperant?</h2>
-						<ul>
-							<li>Taxonomy menu again.</li>
-						</ul>
-					</section>
-					<section>
-						<h2>Are there Select lists of doom?</h2>
 					</section>
 				</section>
 				<section>
@@ -332,10 +320,8 @@
 					</section>
 					<section data-state="soothe">
 						<h2>Build the admin as you go.</h2>
-						<ul>
-							<li class="fragment">Don't leave it to the end.</li>
-							<li class="fragment">Think about it for each feature.</li>
-						</ul>
+						<p class="fragment">Start with a solid foundation from day 1.</p>
+						<p class="fragment">Think about the admin for each feature.</p>
 					</section>
 				</section>
 					<section>
