changes for sandcamp

--- a/index.html
+++ b/index.html
@@ -315,32 +315,25 @@
 					</section>
 				</section>
 				<section>
-					<section>
-						<h2>Whats the easiest way to get it right?</h2>
-					</section>
-					<section data-state="soothe">
-						<h2>Build the admin as you go.</h2>
-						<p class="fragment">Start with a solid foundation from day 1.</p>
-						<p class="fragment">Think about the admin for each feature.</p>
-					</section>
+					<h2>Panopoly</h2>
+					<p class="fragment">Panels was the drunk uncle of Drupal.</p>
+					<p class="fragment">Lots of potential, and every few years you give him another chance.</p>
+					<p class="fragment">Always ended in feelings of betrayl and wasted time.</p>
+					<p class="fragment">Panopoly was his new begining. Finally has his shit together. 1.0 release should be super awesome.</p>
 				</section>
-					<section>
-						<h2>Whats coming next?</h2>
-					</section>
-					<section>
-						<h2>Panopoly</h2>
-						<p>Building our first site with it now. Looks really promising.</p>
-					</section>
-					<section>
-						<h2>Spark</h2>
-						<p>Spark is a Drupal distribution which aims to be "the Pressflow of Drupal authoring experience."</p>
-						<h3>Key features</h3>
-						<ul>
-							<li class="fragment">True WYSIWYG using <a href="http://aloha-editor.org/">Aloha Editor.</a></li>
-							<li class="fragment">Responsive grid Builder.</li>
-							<li class="fragment">Mobile Administration.</li>
-						</ul>
-					</section>
+				<section>
+					<h2>Whats coming next?</h2>
+				</section>
+				<section>
+					<h2>Spark</h2>
+					<p>Spark is a Drupal distribution which aims to be "the Pressflow of Drupal authoring experience."</p>
+					<h3>Key features</h3>
+					<ul>
+						<li class="fragment">True WYSIWYG using <a href="http://aloha-editor.org/">Aloha Editor.</a></li>
+						<li class="fragment">Responsive grid Builder.</li>
+						<li class="fragment">Mobile Administration.</li>
+					</ul>
+				</section>
 				</section>
 				<section>
 					<h2>Further Reading.</h2>
