fixed image links

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
   						
 						<h2>Wordpress admin</h2>
 
-  						<img src="/img/wordpress-admin.png">
+  						<img src="img/wordpress-admin.png">
 					</section>	
 					<section>
 
 						<h2>Drupal Admin</h2>
 
-						<img src="/img/drupal-admin.png">
+						<img src="img/drupal-admin.png">
 
 					</section>	
 					<section>
@@ -115,7 +115,7 @@
 						<h2>Why it's hard to get right.</h2>
 						<p class="fragment">Drupal is super flexible. . .</p>
 						<p class="fragment">So the default admin is hard to peg.</p>
-						<img class="fragment" src="/img/sane-defaults.png">
+						<img class="fragment" src="img/sane-defaults.png">
 						<p class="fragment">Maybe. . .</p>
 					</section>									
 					<section>
@@ -127,7 +127,7 @@
 							</ul>
 					</section>
 					<section>
-						<img src="/img/chimera.jpg">
+						<img src="img/chimera.jpg">
 					</section>
 					<section>
 						<h2>Poor out of box reporting.</h2>
@@ -149,15 +149,15 @@
 					</section>
 					<section>
 						<h2>Designed for common tasks</h2>
-						<img src="/img/common-tasks.png">
+						<img src="img/common-tasks.png">
 					</section>
 					<section>
 						<h2>Obvious easy to use help.</h2>
-					    <img src="/img/easy-help.png">
+					    <img src="img/easy-help.png">
 					</section>
 					<section>
 						<h2>Statistics are front and center.</h2>
-						 <img src="/img/easy-stats.png">
+						 <img src="img/easy-stats.png">
 					</section>
 					<section>
 						<h2>Consistency is key.</h2>
@@ -206,7 +206,7 @@
 					</section>
 					<section>
 						<h2>total control</h2>
-						<img src="/img/total-control.png">
+						<img src="img/total-control.png">
 					</section>
 					<section>
 						<h2>total control</h2>
@@ -220,7 +220,7 @@
 					</section>
 					<section>
 						<h2>admin menu</h2>
-						<img src="/img/admin-menu.png">
+						<img src="img/admin-menu.png">
 					</section>
 					<section>
 						<h2>admin menu</h2>
@@ -233,7 +233,7 @@
 					</section>
 					<section>
 						<h2>WorkBench</h2>
-						<img src="/img/workbench.png">
+						<img src="img/workbench.png">
 					</section>
 					<section>
 						<h2>Workbench</h2>
@@ -247,7 +247,7 @@
 					</section>
 					<section>
 						<h2>Advanced Help</h2>
-						<img src="/img/advanced-help.png">
+						<img src="img/advanced-help.png">
 					</section>
 					<section>
 						<h2>Advanced Help</h2>
@@ -294,12 +294,12 @@
 						<h2>For Select Lists</h2>
 						<p class="fragment">Lots of options need to find one that works for you, here's 2.</p>
 						<p class="fragment"><a href="http://drupal.org/project/chosen">Chosen</a><br>
-							<img src="/img/chosen_0.png">
+							<img src="img/chosen_0.png">
 						</p>
 						<p class="fragment">
 							<a href="http://drupal.org/project/hierarchical_select">Hierarchical Select</a>
 							<br>
-							<img src="/img/hs2.png">
+							<img src="img/hs2.png">
 						</p>					
 					</section>
 					<section>
@@ -310,7 +310,7 @@
 						<p class="fragment">
 							<a href="http://drupal.org/project/nodequeue">nodequeue</a>
 							<br>
-							<img src="/img/nodeque.jpg">
+							<img src="img/nodeque.jpg">
 						</p>					
 					</section>
 				</section>
